--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.5",
     "next-pwa": "^5.5.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "17.0.29",
